@startuml
skinparam packageStyle rectangle
skinparam backgroundColor #F8F9FA
skinparam componentStyle uml2

package "Models" {
    class Employee {
        -id: int
        -name: str
        -position: str
        -face_encoding: bytes
        -photo_path: str
        +can_access(cabinet): bool
    }
    
    class Key {
        -cabinet: str
        -status: KeyStatus
        -holder_id: int
        -holder_name: str
        +is_available(): bool
    }
    
    enum KeyStatus {
        AVAILABLE
        ISSUED
    }
}

package "Database" {
    class Database {
        +add_employee()
        +get_employee()
        +get_employee_by_face()
        +get_key()
        +get_all_keys()
        +update_key()
    }
}

package "Services" {
    class DataStore
    class CameraService
    class FaceService
    class KeyService
}

package "UI" {
    class MainWindow
    class VideoPanel
    class EmployeeCard
    class KeysTable
    class EventLog
}

Database --> Employee
Database --> Key
DataStore --> Database
FaceService --> DataStore
KeyService --> DataStore
MainWindow --> CameraService
MainWindow --> FaceService
MainWindow --> KeyService
Key "*" -- "1" KeyStatus

@enduml
